# train_network

./: .gitignore  README.md  test.py
.github/workflows/: docker-build.yml
dev/ground/track_controller/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig
dev/ground/track_controller/main/: CMakeLists.txt  idf_component.yml  main.c  server_cert.pem
dev/ground/track_controller/main/ota_manager/: ota_manager.c  ota_manager.h
dev/ground/track_controller/main/turnout_manager/: turnout_manager.c  turnout_manager.h
dev/ground/track_controller/main/websocket_manager/: websocket_manager.c  websocket_manager.h
dev/ground/track_controller/main/wifi_manager/: wifi_manager.c  wifi_manager.h
dev/server/access_point/: Dockerfile  Makefile  dnsmasq.conf.tmpl  entrypoint.sh  hostapd.conf.tmpl
dev/server/backend/: Dockerfile  Dockerfile.dev  Makefile  esp32.sdp
dev/server/backend/src/: Program.cs
dev/server/backend/src/Models/: MessageEnvelope.cs  Protocol.cs  WsMessage.cs
dev/server/backend/src/Properties/: launchSettings.json
dev/server/backend/src/Services/: ConnectionManager.cs  MessageHandler.cs  UdpReceiverService.cs  VideoBroadcastService.cs
dev/server/backend/test/: Dockerfile  Makefile  client_test.py
dev/server/distrib/: Dockerfile  Dockerfile.prod  Makefile  nginx.conf
dev/server/frontend/: Dockerfile  Dockerfile.prod  Makefile
dev/server/frontend/src/: package.json
dev/server/frontend/src/src/: App.css  App.js  App.tsx  index.tsx
doc/: camera.puml  connection.puml  light.puml  logs.puml  maintainer.puml  speedControl.puml  stream_udp.puml
(+24 files in other folders)
